--- a/misc/kitty.conf
+++ b/misc/kitty.conf
@@ -12,8 +12,8 @@
 # bold_italic_font auto
 font_family       Ubuntu Mono derivative Powerline
 bold_font         Ubuntu Mono derivative Powerline Bold
-italic_font       autoivative Powerline Italic
-bold_italic_font  autoivative Powerline Bold Italic
+italic_font       Ubuntu Mono derivative Powerline Italic
+bold_italic_font  Ubuntu Mono derivative Powerline Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
