--- a/misc/kitty.conf
+++ b/misc/kitty.conf
@@ -193,6 +193,7 @@ adjust_line_height  1
 
 #: Performance tuning {{{
 
+repaint_delay 50
 # repaint_delay 10
 
 #: Delay (in milliseconds) between screen updates. Decreasing it,
