--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -4,18 +4,10 @@
   "coc.preferences.diagnostic.infoSign": "ℹ",
   "coc.preferences.diagnostic.hintSign": "➤",
   "languageserver": {
-    "ccls": {
-      "command": "/home/eggerk/software/ccls/Release/ccls",
-      "filetypes": ["c", "cpp", "cuda", "objc", "objcpp"],
-      "rootPatterns": [".ccls", "compile_commands.json", ".vim/", ".hg/"],
-      "initializationOptions": {
-         "cacheDirectory": "/home/eggerk/.cache/ccls",
-         "index": {
-           "threads": 4,
-           "initialBlacklist": ["."],
-           "trackDependency": 1
-         }
-       }
+    "clangd": {
+      "command": "/home/eggerk/software/clang+llvm-8.0.0-x86_64-linux-gnu-ubuntu-18.04/bin/clangd",
+      "rootPatterns": ["compile_flags.txt", "compile_commands.json", ".vim/", ".git/", ".hg/"],
+      "filetypes": ["c", "cpp", "objc", "objcpp"]
     }
   }
 }
