--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,8 +1,8 @@
 {
   "coc.preferences.rootPatterns": [".ccls", "compile_commands.json", ".vim/", ".hg/"],
-  "coc.preferences.diagnostic.errorSign": "✖",
-  "coc.preferences.diagnostic.infoSign": "ℹ",
-  "coc.preferences.diagnostic.hintSign": "➤",
+  "diagnostic.errorSign": "✖",
+  "diagnostic.infoSign": "ℹ",
+  "diagnostic.hintSign": "➤",
   "languageserver": {
     "clangd": {
       "command": "/home/eggerk/software/clang+llvm-8.0.0-x86_64-linux-gnu-ubuntu-18.04/bin/clangd",
