--- a/misc/alacritty.yml
+++ b/misc/alacritty.yml
@@ -162,12 +162,13 @@ persistent_logging: false
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
-# Colors (Tomorrow Night Bright)
+# Colors
+# From https://github.com/nathanbuchar/atom-one-dark-terminal/blob/master/COLORS
 colors:
   # Default colors
   primary:
-    foreground: '0xd9d9d2'
-    background: '0x222d31'
+    foreground: '0xABB2BF'
+    background: '0x1e2127'
     # background: '0x000000'
     # foreground: '0xeaeaea'
 
@@ -198,24 +199,24 @@ colors:
 
   # Normal colors
   normal:
-    black:   '0x000000'
-    red:     '0xd54e53'
-    green:   '0xb9ca4a'
-    yellow:  '0xe6c547'
-    blue:    '0x7aa6da'
-    magenta: '0xc397d8'
-    cyan:    '0x70c0ba'
-    white:   '0xeaeaea'
+    black:   '0x1E2127'
+    red:     '0xE06C75'
+    green:   '0x98C379'
+    yellow:  '0xD19A66'
+    blue:    '0x61AFEF'
+    magenta: '0xC678DD'
+    cyan:    '0x56B6C2'
+    white:   '0xABB2BF'
 
   # Bright colors
   bright:
-    black:   '0x666666'
-    red:     '0xff3334'
-    green:   '0x9ec400'
-    yellow:  '0xe7c547'
-    blue:    '0x7aa6da'
-    magenta: '0xb77ee0'
-    cyan:    '0x54ced6'
+    black:   '0x5C6370'
+    red:     '0xE06C75'
+    green:   '0x98C379'
+    yellow:  '0xD19A66'
+    blue:    '0x61AFEF'
+    magenta: '0xC678DD'
+    cyan:    '0x56B6C2'
     white:   '0xffffff'
 
   # Dim colors
