--- a/misc/alacritty.yml
+++ b/misc/alacritty.yml
@@ -168,7 +168,7 @@ colors:
   # Default colors
   primary:
     foreground: '0xABB2BF'
-    background: '0x1e2127'
+    background: '0x282c34'
     # background: '0x000000'
     # foreground: '0xeaeaea'
 
@@ -512,8 +512,8 @@ key_bindings:
   - { key: PageDown,                chars: "\x1b[6~"                         }
   - { key: Tab,      mods: Shift,   chars: "\x1b[Z"                          }
   - { key: Back,                    chars: "\x7f"                            }
-  - { key: Back,     mods: Shift,   chars: "\x1b\x7f"                        }
-  - { key: Back,     mods: Alt,     chars: "\x1b\x7f"                        }
+  - { key: Back,     mods: Shift,   chars: "\x7f"                            }
+  - { key: Back,     mods: Alt,     chars: "\x7f"                            }
   - { key: Insert,                  chars: "\x1b[2~"                         }
   - { key: Delete,                  chars: "\x1b[3~"                         }
   - { key: Left,     mods: Shift,   chars: "\x1b[1;2D"                       }
