--- a/misc/kitty.conf
+++ b/misc/kitty.conf
@@ -66,10 +66,12 @@ adjust_line_height  1
 #: Cursor customization {{{
 
 # cursor #cccccc
+cursor #abb2bf
 
 #: Default cursor color
 
 # cursor_text_color #111111
+cursor_text_color #282c34
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
@@ -384,8 +386,8 @@ repaint_delay 50
 # foreground #dddddd
 # background #000000
 
-foreground #d9d9d2
-background #222d31
+foreground #abb2bf
+background #282c34
 
 #: The foreground and background colors
 
@@ -463,25 +465,25 @@ background #222d31
 
 #: white
 
+color0 #1e2127
+color1 #e06c75
+color2 #98c379
+color3 #d19a66
+color4 #61afef
+color5 #c678dd
+color6 #56b6d2
+color7 #abb2bf
+
+color8 #5c6370
+color9 #e06c75
+color10 #98c379
+color11 #d19a66
+color12 #61afef
+color13 #c678dd
+color14 #56b6c2
+color15 #ffffff
+
 #: }}}
-
-color0 #151515
-color1 #ac4142
-color2 #7e8e50
-color3 #e5b567
-color4 #6c99bb
-color5 #9f4e85
-color6 #7dd6cf
-color7 #d0d0d0
-
-color8 #505050
-color9 #ac4142
-color10 #7e8e50
-color11 #e5b567
-color12 #6c99bb
-color13 #9f4e85
-color14 #7dd6cf
-color15 #f5f5f5
 
 #: Advanced {{{
 
@@ -551,6 +553,7 @@ color15 #f5f5f5
 #: one running on a remote server via SSH can read your clipboard.
 
 # term xterm-kitty
+term xterm-256color
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
