--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,10 +1,13 @@
 # Opacity
+opacity-rule = [
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+  "99:class_g *= 'Shotwell'",
+  "99:class_g *= 'Gimp-2.8'",
+  "99:class_g *= 'gimp-2.8'"
+];
 inactive-opacity = 0.85;
 active-opacity = 1;
 # Make hidden windows fully transparent.
-opacity-rule = [
-  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
-];
 
 # frame-opacity = 0.7;
 # inactive-opacity-override = false;
