--- a/misc/kitty.conf
+++ b/misc/kitty.conf
@@ -700,6 +700,7 @@ term xterm-256color
 # map kitty_mod+v  paste_from_clipboard
 # map kitty_mod+s  paste_from_selection
 # map shift+insert paste_from_selection
+map ctrl+super+v paste_from_selection
 # map kitty_mod+o  pass_selection_to_program
 
 #: You can also pass the contents of the current selection to any
