--- a/config_files/home/eggerk/.config/kitty/kitty.conf
+++ b/config_files/home/eggerk/.config/kitty/kitty.conf
@@ -226,7 +226,7 @@ repaint_delay 50
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
