--- a/config_files/home/eggerk/.i3/config
+++ b/config_files/home/eggerk/.i3/config
@@ -315,6 +315,7 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id "$dotfiles_path/programs/audio
 # Decrease sound volume.
 bindsym XF86AudioLowerVolume exec --no-startup-id "$dotfiles_path/programs/audio_tools/client.sh lower"
 bindsym XF86AudioMute exec --no-startup-id "$dotfiles_path/programs/audio_tools/client.sh mute"
+bindsym $mod+F10 exec --no-startup-id "$dotfiles_path/programs/audio_tools/client.sh show"
 bindsym $mod+F1 exec --no-startup-id "$dotfiles_path/programs/audio_tools/client.sh cycle-inputs"
 exec --no-startup-id /home/eggerk/.cargo/bin/audio_tools
 
