--- a/config_files/home/eggerk/.i3/config
+++ b/config_files/home/eggerk/.i3/config
@@ -317,7 +317,7 @@ bindsym XF86AudioLowerVolume exec --no-startup-id "$dotfiles_path/programs/audio
 bindsym XF86AudioMute exec --no-startup-id "$dotfiles_path/programs/audio_tools/client.sh mute"
 bindsym $mod+F10 exec --no-startup-id "$dotfiles_path/programs/audio_tools/client.sh show"
 bindsym $mod+F1 exec --no-startup-id "$dotfiles_path/programs/audio_tools/client.sh cycle-inputs"
-exec --no-startup-id /home/eggerk/.cargo/bin/audio_tools
+exec_always --no-startup-id "pgrep audio_tools || /home/eggerk/.cargo/bin/audio_tools"
 
 # Screen brightness controls.
 bindsym XF86MonBrightnessUp exec $dotfiles_path/X/acpilight/xbacklight -inc 5 # increase screen brightness
