--- a/config_files/home/eggerk/.config/kitty/kitty.conf
+++ b/config_files/home/eggerk/.config/kitty/kitty.conf
@@ -386,9 +386,6 @@ enable_audio_bell no
 # foreground #dddddd
 # background #000000
 
-foreground #abb2bf
-background #282c34
-
 #: The foreground and background colors
 
 # background_opacity         1.0
@@ -425,63 +422,74 @@ background #282c34
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-# color0 #000000
-# color8 #767676
 
-#: black
+# Solarized light, https://github.com/dexpota/kitty-themes/blob/master/themes/Solarized_Light.conf
+background            #fdf6e3
+foreground            #42575f
+cursor                #92a7af
+selection_background  #b9b29b
+color0 #e4e4e4
+color8 #ffffd7
+color1 #d70000
+color9 #d75f00
+color2 #5f8700
+color10 #585858
+color3 #af8700
+color11 #626262
+color4 #0087ff
+color12 #808080
+color5 #af005f
+color13 #5f5faf
+color6 #00afaf
+color14 #8a8a8a
+color7 #262626
+color15 #1c1c1c
+selection_foreground #fcf4dc
 
-# color1 #cc0403
-# color9 #f2201f
+# # Material, https://github.com/dexpota/kitty-themes/blob/master/themes/Material.conf
+# background            #eaeaea
+# foreground            #222221
+# cursor                #16aec9
+# selection_background  #c1c1c1
+# color0                #212121
+# color8                #424242
+# color1                #b7141e
+# color9                #e83a3f
+# color2                #457b23
+# color10               #7aba39
+# color3                #f5971d
+# color11               #fee92e
+# color4                #134eb2
+# color12               #53a4f3
+# color5                #550087
+# color13               #a94dbb
+# color6                #0e707c
+# color14               #26bad1
+# color7                #eeeeee
+# color15               #d8d8d8
+# selection_foreground #eaeaea
 
-#: red
+# # Dark.
+# foreground #abb2bf
+# background #282c34
 
-# color2  #19cb00
-# color10 #23fd00
+# color0 #1e2127
+# color1 #e06c75
+# color2 #98c379
+# color3 #d19a66
+# color4 #61afef
+# color5 #c678dd
+# color6 #56b6d2
+# color7 #abb2bf
 
-#: green
-
-# color3  #cecb00
-# color11 #fffd00
-
-#: yellow
-
-# color4  #0d73cc
-# color12 #1a8fff
-
-#: blue
-
-# color5  #cb1ed1
-# color13 #fd28ff
-
-#: magenta
-
-# color6  #0dcdcd
-# color14 #14ffff
-
-#: cyan
-
-# color7  #dddddd
+# color8 #5c6370
+# color9 #e06c75
+# color10 #98c379
+# color11 #d19a66
+# color12 #61afef
+# color13 #c678dd
+# color14 #56b6c2
 # color15 #ffffff
-
-#: white
-
-color0 #1e2127
-color1 #e06c75
-color2 #98c379
-color3 #d19a66
-color4 #61afef
-color5 #c678dd
-color6 #56b6d2
-color7 #abb2bf
-
-color8 #5c6370
-color9 #e06c75
-color10 #98c379
-color11 #d19a66
-color12 #61afef
-color13 #c678dd
-color14 #56b6c2
-color15 #ffffff
 
 #: }}}
 
