--- a/config_files/home/eggerk/.tmux.conf
+++ b/config_files/home/eggerk/.tmux.conf
@@ -85,7 +85,7 @@ bind p paste-buffer
 ##############################
 ### Color & Style Settings ###
 ##############################
-source ~/dotfiles/tmux/tmux/theme.sh
+# source ~/dotfiles/tmux/tmux/theme.sh
 
 # List of plugins
 # set -g @plugin 'tmux-plugins/tpm'
