--- a/config_files/home/eggerk/.i3/config
+++ b/config_files/home/eggerk/.i3/config
@@ -197,16 +197,15 @@ bindsym $mod+r mode "resize"
 
 # Theme colors
 # class                   border  backgr. text    indic.   child_border
-  client.focused          #2F343F #2F343F #ffffff #FDF6E3  #5294E2
-  client.focused_inactive #2F3D44 #2F3D44 #aaaaaa #454948
-  client.unfocused        #2F3D44 #2F3D44 #aaaaaa #454948
+  client.focused          #3266b3 #3266b3 #ffffff #FDF6E3  #3266b3
+  client.focused_inactive #6F7D84 #6F7D84 #c2c2c2 #454948
+  client.unfocused        #6F7D84 #6F7D84 #c2c2c2 #454948
   client.urgent           #CB4B16 #FDF6E3 #5294E2 #268BD2
   client.placeholder      #000000 #0c0c0c #ffffff #000000
 
 client.background #2B2C2B
 
 # Gaps.
-for_window [class="^.*"] border pixel 2
 smart_gaps inverse_outer
 exec_always $dotfiles_path/tools/set_gaps.sh
 gaps inner 5
@@ -217,9 +216,9 @@ mode $gaps_mode {
   bindsym Shift+s      gaps horizontal current set 0 ; mode "default"
   bindsym s            gaps horizontal current set 100 ; mode "default"
   bindsym comma  gaps outer current set 3; gaps horizontal current set 0; gaps inner current set 5 ; mode "default"
-  bindsym period gaps outer current set 0; gaps horizontal current set 100; gaps inner current set 12; mode "default"
+  bindsym period gaps outer current set 0; gaps horizontal current set 200; gaps inner current set 10; mode "default"
   bindsym Shift+comma  gaps outer all set 3; gaps horizontal all set 0; gaps inner all set 5 ; mode "default"
-  bindsym Shift+period gaps outer all set 0; gaps horizontal all set 100; gaps inner all set 12; mode "default"
+  bindsym Shift+period gaps outer all set 0; gaps horizontal all set 200; gaps inner all set 10; mode "default"
   bindsym Return mode "default"
   bindsym Escape mode "default"
   bindsym $mod+g mode "default"
@@ -311,8 +310,8 @@ bindsym $mod+shift+p mode $power_mode
 bindsym XF86AudioRaiseVolume exec --no-startup-id "audio_tools raise"
 bindsym XF86AudioLowerVolume exec --no-startup-id "audio_tools lower"
 bindsym XF86AudioMute exec --no-startup-id "audio_tools mute"
-bindsym $mod+F10 exec --no-startup-id "audio_tools show"
-bindsym $mod+F1 exec --no-startup-id "audio_tools cycle-inputs"
+bindsym $mod+F10 exec --no-startup-id "audio_tools volume_notification"
+bindsym $mod+F1 exec --no-startup-id "audio_tools next_input"
 
 # Screen brightness controls.
 bindsym XF86MonBrightnessUp exec $dotfiles_path/X/acpilight/xbacklight -inc 5 # increase screen brightness
