--- a/config_files/home/eggerk/.i3/config
+++ b/config_files/home/eggerk/.i3/config
@@ -158,6 +158,7 @@ assign [class="Clementine"] $workspace10
 assign [class="Spotify"] $workspace10
 assign [class="Steam"] $workspace2
 for_window [class="Spotify"] move to workspace $workspace10
+for_window [class="spotify"] move to workspace $workspace10
 for_window [class="LineAttack"] floating enable
 for_window [class="[Ss]we"] floating enable
 for_window [instance="origin.exe"] floating enable
@@ -257,7 +258,7 @@ bindsym $mod+Ctrl+m exec $terminal -e 'alsamixer'
 
 # Start Applications
 bindsym $mod+F2 exec firefox
-bindsym $mod+F3 exec $terminal -e 'ranger'
+bindsym $mod+F3 exec $terminal ranger
 
 # Open specific applications in floating mode
 for_window [class="[Gg]nome-calculator"] floating enable
@@ -372,7 +373,7 @@ no_focus [class="Xfce4-notifyd"]
 
 # Compton
 exec_always --no-startup-id killall compton; compton --backend glx --paint-on-overlay --glx-no-stencil \
-                             --vsync opengl-swc --unredir-if-possible -b \
+                             --vsync --unredir-if-possible -b \
                              --config $dotfiles_path/compton/compton.conf
 
 # Disable caps lock because sometimes it reenables itself for some reason.
