--- a/config_files/home/eggerk/.config/ranger/rc.conf
+++ b/config_files/home/eggerk/.config/ranger/rc.conf
@@ -358,6 +358,7 @@ map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
 map yp shell -f echo -n %d/%f | xsel -i; xsel -o | xsel -i -b
 map yd shell -f echo -n %d    | xsel -i; xsel -o | xsel -i -b
 map yn shell -f echo -n %f    | xsel -i; xsel -o | xsel -i -b
+map yN shell -f printf '%%s\n' %s | head -c -1 | xsel -i; xsel -o | xsel -i -b
 
 # Filesystem Operations
 map =  chmod
