--- a/config_files/home/eggerk/.config/kitty/kitty.conf
+++ b/config_files/home/eggerk/.config/kitty/kitty.conf
@@ -10,10 +10,10 @@
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
-font_family       Ubuntu Mono derivative Powerline
-bold_font         Ubuntu Mono derivative Powerline Bold
-italic_font       Ubuntu Mono derivative Powerline Italic
-bold_italic_font  Ubuntu Mono derivative Powerline Bold Italic
+font_family       Ubuntu Mono Nerd Font Complete
+bold_font         Ubuntu Mono Bold Nerd Font Complete
+italic_font       Ubuntu Mono Italic Nerd Font Complete
+bold_italic_font  Ubuntu Mono Bold Italic Nerd Font Complete
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
