--- a/config_files/home/eggerk/.gitconfig
+++ b/config_files/home/eggerk/.gitconfig
@@ -5,10 +5,12 @@
 [includeif "gitdir:/home/eggerk/work/"]
   path = /home/eggerk/dotfiles/git/user_configs/work
 [merge]
-	tool = vimdiff
+	tool = nvim
 	conflictstyle = diff3
 [mergetool]
 	prompt = false
+[mergetool "nvim"]
+  cmd = nvim -f -c \"Gdiffsplit!\" \"$MERGED\"
 [core]
 	excludesfile = /home/eggerk/dotfiles/git/gitignore
 [difftool]
