--- a/config_files/home/eggerk/.local/share/systemd/user/change-desktop-wallpaper.service
+++ b/config_files/home/eggerk/.local/share/systemd/user/change-desktop-wallpaper.service
@@ -4,6 +4,8 @@ Description=Foo
 [Service]
 ExecStart=/home/eggerk/dotfiles/tools/set-wallpaper.sh
 Environment=DISPLAY=:0
+RuntimeDirectory=change-desktop-wallpaper
+RuntimeDirectoryPreserve=yes
 
 [Install]
 WantedBy=multi-user.target
