--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -312,7 +312,7 @@ bindsym $mod+shift+p mode $power_mode
 bindsym XF86AudioRaiseVolume exec --no-startup-id "pactl set-sink-volume 0 +5%"
 # bindsym XF86AudioLowerVolume exec --no-startup-id "audio_tools lower"
 bindsym XF86AudioLowerVolume exec --no-startup-id "pactl set-sink-volume 0 -5%"
-bindsym XF86AudioMute exec --no-startup-id "audio_tools mute"
+bindsym XF86AudioMute exec --no-startup-id "pactl set-sink-mute 0 toggle"
 # bindsym $mod+F10 exec --no-startup-id "audio_tools volume_notification"
 bindsym $mod+F10 exec --no-startup-id "paplay /usr/share/sounds/freedesktop/stereo/message.oga"
 bindsym $mod+F1 exec --no-startup-id "audio_tools next_input"
@@ -326,7 +326,7 @@ bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
 
 # Media player controls
 # Needs https://github.com/acrisci/playerctl/releases
-set $mediactrl_path /home/eggerk/.cargo/bin/media_control
+set $mediactrl_path media_control
 bindsym XF86AudioPlay exec $mediactrl_path play-pause
 bindsym XF86AudioPause exec $mediactrl_path pause
 bindsym XF86AudioNext exec $mediactrl_path next
@@ -346,7 +346,7 @@ exec xbindkeys
 
 # Applets.
 exec --no-startup-id nm-applet
-exec --no-startup-id redshift-gtk
+exec --no-startup-id redshift-gtk -l 47:8
 exec --no-startup-id blueman-applet
 exec --no-startup-id "/home/eggerk/.local/share/tresorit/tresorit --hidden"
 exec --no-startup-id "udiskie --tray"
